[package]
name = "sentinel"
version = "0.1.3"
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Peer-to-peer network group consensus and PKI-like ID confirmation"
documentation = "http://maidsafe.net/sentinel/latest"
repository = "https://github.com/maidsafe/sentinel"
readme = "README.md"
license = "GPL-3.0"
homepage = "http://maidsafe.net"

[dependencies]
rustc-serialize = "~0.3.16"
cbor = "~0.3.16"
sodiumoxide = "~0.0.9"
rand = "~0.3.12"
accumulator = "~0.1.3"
lru_time_cache = "~0.2.4"
